bug: navbar active overflow

--- a/common.css
+++ b/common.css
@@ -34,11 +34,11 @@ a {
     font-weight: bold;
     font-size: large;
     height: 60px;
-    padding: 10px;
+    padding: 30px;
 }
 
 .nav-item{
-   padding: 1rem;  
+   padding: 0.7rem;  
 }
 
 
